--- a/client/src/components/Article/styles.module.css
+++ b/client/src/components/Article/styles.module.css
@@ -1,5 +1,6 @@
 .cardWrapper {
   width: 700px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -7,7 +8,6 @@
   padding: 30px;
   gap: 10px;
   color: rgb(59, 107, 148);
-  /* cursor: pointer; */
 
   -webkit-box-shadow: 0px 0px 9px 0px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 0px 9px 0px rgba(34, 60, 80, 0.2);
