--- a/client/src/components/ArticleList/styles.module.css
+++ b/client/src/components/ArticleList/styles.module.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
-  flex-direction: column;
+  margin-top: 50px;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 30px;
 }
